--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Joy<span class="text-primary">sec</span></h3>
             <ul>
@@ -23,6 +23,19 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div>
+                <h3 class="banner-grets">Hi, I am </h3>
+                <h1 class="banner-title">Joy Sec</h1>
+                <p>Proffessional Webdeveloper, Network <br>and Webapplication Penetrations Tester, security
+                    researcher. <br> Wellcome to My Portfolio.
+                </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
