about section added

--- a/index.html
+++ b/index.html
@@ -28,17 +28,25 @@
             <div>
                 <h3 class="banner-grets">Hi, I am </h3>
                 <h1 class="banner-title">Joy Sec</h1>
-                <p>Proffessional Webdeveloper, Network <br>and Webapplication Penetrations Tester, security
+                <p style="font-family: 'Times New Roman', Times, serif; margin-bottom: 30px;">Proffessional
+                    Webdeveloper, Network <br>and Webapplication Penetrations Tester, security
                     researcher. <br> Wellcome to My Portfolio.
                 </p>
                 <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-secondary">Contact</button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
+
+
+
         </div>
     </header>
     <main>
 
+        <section class="about">
+            <h3 class="about-title">About Me</h3>
+            <p class="about-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
     </main>
     <footer>
 
