--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
         <section class="about">
             <h3 class="about-title">About Me</h3>
             <p class="about-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-info-container">
+                <div class="about-inf">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-desc">Joy sec</p>
+                </div>
+                <div class="about-inf">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-desc">sunlite2255@gmail.com</p>
+                </div>
+                <div class="about-inf">
+                    <h4 class="info-title">Date of Birth:</h4>
+                    <p class="info-desc">17 January 2005</p>
+                </div>
+                <div class="about-inf">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-desc">Bangladesh</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
