--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div>
                 <h3 class="banner-grets">Hi, I am </h3>
                 <h1 class="banner-title">Joy Sec</h1>
-                <p style="font-family: 'Times New Roman', Times, serif; margin-bottom: 30px;">Proffessional
+                <p class="banner-desc">Proffessional
                     Webdeveloper, Network <br>and Webapplication Penetrations Tester, security
                     researcher. <br> Wellcome to My Portfolio.
                 </p>
@@ -45,7 +45,10 @@
 
         <section class="about">
             <h3 class="about-title">About Me</h3>
-            <p class="about-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="about-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple,
+                clean and slick websites that provide real value to the end user. Thousands of clients have procured
+                exceptional resulfs while working with me. Delivering work within time and budget which meets clients
+                requirements in our mata.</p>
             <div class="about-info-container">
                 <div class="about-inf">
                     <h4 class="info-title">Name:</h4>
@@ -67,27 +70,93 @@
         </section>
 
         <section>
-            <h3 class="what-i-title">What i do</h3>
-            <p id="what-desc" class="what-i-desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-            <div class="skill">
-                <img src="images/icons/js.png" alt="" class="skill-img">
-                <h3 class="skill-title">Vanilla JavaScript</h3>
-                <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <h3 class="what-i-title">What I do</h3>
+            <p id="what-desc" class="what-i-desc">I have more than 10 years experience building software for clients all
+                over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want
+                to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="" class="skill-img">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="" class="skill-img">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="" class="skill-img">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="" class="skill-img">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
             </div>
-            <div class="skill">
-                <img src="images/icons/react.png" alt="" class="skill-img">
-                <h3 class="skill-title">React</h3>
-                <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="" class="skill-img">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="" class="skill-img">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="" class="skill-img">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="" class="skill-img">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
             </div>
-            <div class="skill">
-                <img src="images/icons/nodejs.png" alt="" class="skill-img">
-                <h3 class="skill-title">Node.js</h3>
-                <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-            </div>
-            <div class="skill">
-                <img src="images/icons/mongo.png" alt="" class="skill-img">
-                <h3 class="skill-title">MongoDB</h3>
-                <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+        </section>
+
+
+        <section>
+            <h3 class="resume-section">A Summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-colum">
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"></h2>
+                        <h3 class="resume-item-institute"></h3>
+                        <p class="resume-desc"></p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"></h2>
+                        <h3 class="resume-item-institute"></h3>
+                        <p class="resume-desc"></p>
+                    </div>
+                </div>
+                <div class="resume-colum">
+                    <h3 class="resume-title">My Experience</h3>
+                </div>
             </div>
         </section>
     </main>
