--- a/index.html
+++ b/index.html
@@ -207,9 +207,16 @@
                 <a href=""><img src="images/icons/twitter.png" alt=""></a>
             </div>
         </div>
-        
+
         <div class="footer-column">
             <h3 class="footer-title">Let’s Message me</h3>
+            <form action="" class="contact-form">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <input type="submit" value="Submit">
+            </form>
+
         </div>
     </footer>
 </body>
