--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Oswald:wght@600&display=swap"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&family=Oswald:wght@600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 
@@ -213,8 +216,8 @@
             <form action="" class="contact-form">
                 <input type="text" name="" id="" placeholder="Your Name">
                 <input type="email" name="" id="" placeholder="Your Email">
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-                <input type="submit" value="Submit">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input type="submit" value="Submit" class="btn-primary">
             </form>
 
         </div>
