--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&family=Oswald:wght@600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/bd5a712511.js" crossorigin="anonymous"></script>
 
     <title>Portfolio</title>
 </head>
@@ -35,8 +36,8 @@
                     Webdeveloper, Network <br>and Webapplication Penetrations Tester, security
                     researcher. <br> Wellcome to My Portfolio.
                 </p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-secondary">Contact</button>
+                <button class="btn-primary"><i class="fa-sharp fa-regular fa-circle-down"></i> Download CV</button>
+                <button class="btn-secondary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
 
@@ -192,7 +193,7 @@
             </div>
 
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-sharp fa-regular fa-circle-down"></i> Download CV</button>
             </div>
 
         </section>
