--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <button class="btn-primary"><i class="fa-sharp fa-regular fa-circle-down"></i> Download CV</button>
                 <button class="btn-secondary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
-            <img class="profile-pic" src="images/hardy.png" alt="">
+            <img class="profile-pic" src="images/My project.png" alt="">
 
 
 
